# TreeBoxModel

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements_pip.txt  run_apes.py
docs/source/: conf.py  index.rst  instructions_to_run.md  modelled_system.md
src/: constants.py  gas.py  model.py  model_variables.py  odefun.py  odefun_gas.py  odefun_tree.py  roots.py  run_apes_roots.py  soil.py  solute.py  tree.py  treeelement.py
src/test/: run_gas_test.py  source_sink_test.py  test_gas.py  test_iotools.py  test_model.py  test_roots.py  test_soil.py  test_tree.py
src/tools/: animation.py  iotools.py  plotting.py  tree_to_gas.py
