[tool.poetry]
name = "TreeBoxModel"
version = "0.5"
description = "Simple tree model for xylem and phloem sap flux calcualtions"
authors = ["Altesmi <optikkasalo@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
xarray = "^2022.3.0"
scipy = "^1.8.0"
pandas = "^1.4.1"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
Sphinx = "^4.4.0"
netCDF4 = "^1.5.8"


[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
